internal/config/testdata/invalid-config/EmptyAccount.hjson
{
  APIAppCredentials:
  {
    ClientID: client-id
    ClientSecret: client-secret
  }
  Account: ""
  SecretsBackendType: auto
  Jobs:
  [
    {
      SourceFolder: ./testdata
      DeleteAfterUpload: false
      IncludePatterns: []
      ExcludePatterns: []
    }
  ]
}
